--- a/config.yaml
+++ b/config.yaml
@@ -20,23 +20,23 @@ title: 'Differential Expression with Seurat' # FIXME
 created: 2025-11-01 # FIXME
 
 # Comma-separated list of keywords for the lesson. Avoid words in the title.
-keywords: 'software, data, lesson' # FIXME
+keywords: 'rna-seq, single cell, gene expression, transcriptomics, omics' 
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha' # FIXME
+life_cycle: 'alpha' # FIXME
 
 # License of the lesson
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/melbournebioinformatics/workbench-template-rmd' # FIXME
+source: 'https://github.com/melbournebioinformatics/seurat-de-2025' 
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'fixme@fixme.org' # FIXME
+contact: 'vinicius.salazar [at] unimelb.edu.au'
 
 # Navigation ------------------------------------------------
 #
